增加gc调优内容