@@ -133,6 +133,33 @@ public class ReferenceCountTest {
 逻辑分代：就是在逻辑上区分新生代和老年代（可以称在叫法上）
 物理分代：就是根据jvm定义的新生代和老年代来分
 
+# JVM内存分代模型
+
+## 新生代 + 老年代 + 永久代（1.7）Permanent Generation/ 元数据区(1.8) Metaspace
+
+1. 永久代 元数据 - Class
+2. 永久代必须指定大小限制 ，元数据可以设置，也可以不设置，无上限（受限于物理内存）
+3. 字符串常量 1.7 - 永久代，1.8 - 堆
+4. MethodArea逻辑概念 - 永久代、元数据
+
+## 新生代 = Eden + 2个suvivor区
+
+1. YGC回收之后，大多数的对象会被回收，活着的进入s0
+2. 再次YGC，活着的对象eden + s0 -> s1
+3. 再次YGC，eden + s1 -> s0
+4. 年龄足够 -> 老年代 （15 CMS 6）
+5. s区装不下 -> 老年代
+
+## 老年代
+
+1. 顽固分子
+2. 老年代满了FGC（Full GC）
+
+## GC Tuning (Generation)
+
+1. 尽量减少FGC
+2. MinorGC = YGC
+3. MajorGC = FGC
 
 # 常见的垃圾收集（回收）器
 
@@ -209,6 +236,117 @@ Java HotSpot(TM) 64-Bit Server VM (build 25.131-b11, mixed mode)
 
 JDK1.8 默认使用的是 Parallel Scavenge + Parallel Old，如果指定了-XX:+UseParallelGC 参数，则默认指定了-XX:+UseParallelOldGC，可以使用-XX:-UseParallelOldGC 来禁用该功能
 
+## SerialOld （单线程标记整理算法）
+Serial Old是Serial的老年代收集版本，他同样是个单线程收集器，使用标记-整理算法，这个垃圾收集器主要运行在客户端的JVM中默认的老年代垃圾回收器。当然也会发生STW（Stop The World）现象。
+
+**它主要有两大用途：**
+- 一种用途是在 JDK1.5 以及以前的版本中与 Parallel Scavenge 收集器搭配使用
+- 另一种用途是作为 CMS 收集器的后备方案。
+
+## Parallel Old 收集器（多线程标记整理算法）
+**Parallel Scavenge 收集器的老年代版本。**使用多线程和“标记-整理”算法。在注重吞吐量以及 CPU 资源的场合，都可以优先考虑 Parallel Scavenge 收集器和 Parallel Old 收集器
+
+## CMS收集器（多线程标记清除收集器）
+
+**CMS（Concurrent Mark Sweep）收集器是一种以获取最短回收停顿时间（200ms）为目标的收集器。它非常符合在注重用户体验的应用上使用。**
+
+**CMS（Concurrent Mark Sweep）收集器是 HotSpot 虚拟机第一款真正意义上的并发收集器，它第一次实现了让垃圾收集线程与用户线程（基本上）同时工作。**
+
+
+从名字中的**Mark Sweep**这两个词可以看出，CMS 收集器是一种 “标记-清除”算法实现的，它的运作过程相比于前面几种垃圾收集器来说更加复杂一些。整个过程分为四个步骤：
+
+- **初始标记：** 暂停所有的其他线程，并记录下直接与 root 相连的对象，速度很快 ；
+- **并发标记：** 同时开启 GC 和用户线程，用一个闭包结构去记录可达对象。但在这个阶段结束，这个闭包结构并不能保证包含当前所有的可达对象。因为用户线程可能会不断的更新引用域，所以 GC 线程无法保证可达性分析的实时性。所以这个算法里会跟踪记录这些发生引用更新的地方。
+- **重新标记：** 重新标记阶段就是为了修正并发标记期间因为用户程序继续运行而导致标记产生变动的那一部分对象的标记记录，这个阶段的停顿时间一般会比初始标记阶段的时间稍长，远远比并发标记阶段时间短
+- **并发清除：** 开启用户线程，同时 GC 线程开始对未标记的区域做清扫。
+
+![CMS收集器](./image/../imag/CMS收集器..png)
+
+从它的名字就可以看出它是一款优秀的垃圾收集器，主要优点：**并发收集、低停顿**。但是它有下面三个明显的缺点：
+
+- **对 CPU 资源敏感；**
+- **无法处理浮动垃圾；**
+- **它使用的回收算法-“标记-清除”算法会导致收集结束时会有大量空间碎片产生。**
+
+## G1 收集器（Garbage-First）
+
+**G1 (Garbage-First) 是一款面向服务器的垃圾收集器,主要针对配备多颗处理器及大容量内存的机器. 以极高概率满足 GC 停顿时间(10ms)要求的同时,还具备高吞吐量性能特征。**
+
+被视为 JDK1.7 中 HotSpot 虚拟机的一个重要进化特征。它具备以下特点：
+
+- **并行与并发：**G1 能充分利用 CPU、多核环境下的硬件优势，使用多个 CPU（CPU 或者 CPU 核心）来缩短 Stop-The-World 停顿时间。部分其他收集器原本需要停顿 Java 线程执行的 GC 动作，G1 收集器仍然可以通过并发的方式让 java 程序继续执行。
+- **分代收集：**虽然 G1 可以不需要其他收集器配合就能独立管理整个 GC 堆，但是还是保留了分代的概念。
+- **空间整合：**与 CMS 的“标记-清理”算法不同，G1 从整体来看是基于“标记-整理”算法实现的收集器；从局部上来看是基于“标记-复制”算法实现的。
+- **可预测的停顿：**这是 G1 相对于 CMS 的另一个大优势，降低停顿时间是 G1 和 CMS 共同的关注点，但 G1 除了追求低停顿外，还能建立可预测的停顿时间模型，能让使用者明确指定在一个长度为 M 毫秒的时间片段内。
+
+G1 收集器的运作大致分为以下几个步骤：
+
+- 初始标记
+- 并发标记
+- 最终标记
+- 筛选回收
+
+**G1 收集器在后台维护了一个优先列表，每次根据允许的收集时间，优先选择回收价值最大的 Region(这也就是它的名字 Garbage-First 的由来) 。**这种使用 Region 划分内存空间以及有优先级的区域回收方式，保证了 G1 收集器在有限时间内可以尽可能高的收集效率（把内存化整为零）。
+
+
+## ZGC 收集器
+
+与 CMS 中的 ParNew 和 G1 类似，ZGC 也采用标记-复制算法，不过 ZGC 对该算法做了重大改进。
+
+在 ZGC 中出现 Stop The World (1ms) 的情况会更少！
+
+详情可以看 ： [《新一代垃圾回收器 ZGC 的探索与实践》](https://tech.meituan.com/2020/08/06/new-zgc-practice-in-meituan.html)
+
+
+## Shenandoah 收集器（物理上不分代）
+
+JDK12新增的一个名为Shenandoah的GC算法，它的evacuation阶段工作能通过与正在运行中Java工作线程同时进行（即并发，concurrent），从而减少GC的停顿时间。
+
+Shenandoah的停顿时间和堆的大小没有任何关系，这就意味着无论你的堆是200MB，2GB还是200GB，停顿时间是一样的。
+
+详细可以看：[Shenandoah GC：一个来自JDK12的全新并发压缩垃圾回收器_51CTO博客_jdk1.8 gc](https://blog.51cto.com/u_14230003/2435438)
+
+
+
+# 垃圾收集器跟内存大小的关系
+
+1. Serial 几十兆
+2. PS 上百兆 - 几个G
+3. CMS - 20G
+4. G1 - 上百G
+5. ZGC - 4T - 16T（JDK13）
+
+
+# 常见垃圾回收器组合参数设定：(1.8)
+
+- -XX:+UseSerialGC = Serial New (DefNew) + Serial Old
+  - 小型程序。默认情况下不会是这种选项，HotSpot会根据计算及配置和JDK版本自动选择收集器
+- -XX:+UseParNewGC = ParNew + SerialOld
+  - 这个组合已经很少用（在某些版本中已经废弃）
+  - https://stackoverflow.com/questions/34962257/why-remove-support-for-parnewserialold-anddefnewcms-in-the-future
+- -XX:+UseConc<font color=red>(urrent)</font>MarkSweepGC = ParNew + CMS + Serial Old
+- -XX:+UseParallelGC = Parallel Scavenge + Parallel Old (1.8默认) 【PS + SerialOld】
+- -XX:+UseParallelOldGC = Parallel Scavenge + Parallel Old
+- -XX:+UseG1GC = G1
+- Linux中没找到默认GC的查看方法，而windows中会打印UseParallelGC（这里是老师的笔记）
+  - java +XX:+PrintCommandLineFlags -version
+  - 通过GC的日志来分辨
+
+​	我本地在centos7上测试了，是有的
+
+```shell
+[root@localhost ~]# java -XX:+PrintCommandLineFlags -version
+-XX:InitialHeapSize=38065472 -XX:MaxHeapSize=609047552 -XX:+PrintCommandLineFlags -XX:+UseCompressedClassPointers -XX:+UseCompressedOops -XX:+UseParallelGC
+java version "1.8.0_144"
+Java(TM) SE Runtime Environment (build 1.8.0_144-b01)
+Java HotSpot(TM) 64-Bit Server VM (build 25.144-b01, mixed mode)
+```
+
+- Linux下1.8版本默认的垃圾回收器到底是什么？
+
+  - 1.8.0_181 默认（看不出来）Copy MarkCompact
+
+  - 1.8.0_222 默认 PS + PO（我本地是144的版本，默认的也是PS + PO）
 
 
 # 参考资料
